Fix Navbar spacing and colors

--- a/stencil-workspace/src/components/modus-navbar/modus-navbar.scss
+++ b/stencil-workspace/src/components/modus-navbar/modus-navbar.scss
@@ -19,7 +19,6 @@ nav {
   .icon-notifications,
   .icon-help {
     border-radius: $rem-2px;
-    padding: $rem-12px;
 
     path {
       fill: $modus-navbar-icon-color;
@@ -68,6 +67,17 @@ nav {
     }
   }
 
+  .icon-search,
+  .icon-notifications,
+  .icon-help,
+  .icon-apps {
+    padding: $rem-12px;
+  }
+
+  .main-menu {
+    padding: 0 $rem-8px;
+  }
+
   .pressed {
     background-color: $modus-navbar-icon-active-bg;
 
@@ -77,7 +87,6 @@ nav {
   }
 
   .navbar-button {
-    padding: 0 $rem-8px;
     position: relative;
 
     &:hover {
@@ -149,6 +158,7 @@ nav {
         font-weight: $font-weight-semi-bold;
         height: 32px;
         justify-content: center;
+        user-select: none;
         width: 32px;
       }
 
